[project]
name = "sse"
version = "0.1.0"
description = "Server-Sent Events collaboration platform with FastAPI, PostgreSQL, and Redis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy-continuum>=1.4.2",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pyright>=1.1.350",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "routes", "helpers"]
include = [
    "*.py",
    "models/*.py",
    "routes/*.py",
    "helpers/*.py",
    "helpers/db/*.py",
    "helpers/utility/*.py",
]

# Note: Ruff configuration is in .ruff.toml
# Note: Pyright configuration is in pyrightconfig.json
